# sparow

./: .gitignore  AGENTS.md  NORTH_STAR.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  skills-lock.json  todo.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: ci.yml
docs/MVP/: MVP_PLAN.md  MVP_SCOPE.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md
docs/ai/: debugging-playbook.md  dependency-policy.md  result-viewer-harness.md  verification.md
docs/architecture/: phase-1-foundation.md  phase-3-schema-browser.md  phase-4-query-workspace.md  phase-6-productivity-layer.md  query-execution-research.md
fixtures/contracts/: app-bootstrap.json  app-error.json  background-job-accepted.json  background-job-progress.json  cancel-query-execution-result.json  cancel-query-result-export-result.json  connection-details.json  connection-summary.json  connection-test-result.json  database-session-snapshot.json  delete-connection-result.json  delete-saved-query-result.json  disconnect-session-result.json  history-entry.json  list-query-history-request.json  list-query-history-result.json  list-saved-queries-request.json  list-saved-queries-result.json  list-schema-children-request.json  (+22 more)
scripts/: inspect-query-history.mjs  inspect-result-cache.mjs  inspect-saved-queries.mjs  inspect-schema-cache.mjs  result-grid-smoke-helpers.mjs  run-sqlite-inspector.mjs  run-with-node-version.mjs  smoke-foundation.mjs  smoke-postgres.mjs  smoke-productivity-browser.mjs  smoke-results-browser.mjs  smoke-shell-browser.mjs  verify.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/connections/: driver.rs  mod.rs  secret_store.rs  service.rs
src-tauri/src/foundation/: contracts.rs  error.rs  jobs.rs  logging.rs  mod.rs  state.rs
src-tauri/src/persistence/: mod.rs  repository.rs
src-tauri/src/persistence/migrations/: 0001_init.sql  0002_connection_management.sql  0003_schema_browser.sql  0004_result_viewer.sql  0005_query_result_rows_foreign_key.sql  0006_drop_query_result_cache.sql  0007_productivity_layer.sql
src-tauri/src/productivity/: mod.rs  service.rs
src-tauri/src/query/: driver.rs  mod.rs  result_store.rs  service.rs
src-tauri/src/schema/: introspection.rs  mod.rs  service.rs
(+97 files in other folders)
