[package]
name = "sparow"
version = "0.1.0"
description = "Sparow foundation shell"
authors = ["OpenAI Codex"]
edition = "2021"
default-run = "sparow"

[lib]
name = "sparow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
deadpool-postgres = "0.14.1"
futures-util = "0.3.32"
native-tls = "0.2.18"
percent-encoding = "2.3.2"
postgres-native-tls = "0.5.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }
